jesus christ the modal is finally fixed

--- a/views/levelTwo/paywall.css
+++ b/views/levelTwo/paywall.css
@@ -52,7 +52,7 @@ body {
 .panel {
     height: 70vh;
     background: #27292c;
-    padding: 20px;
+    /* padding: 20px; */
     overflow-y: scroll;
 }
 
