--- a/views/levelTwo/paywall.html
+++ b/views/levelTwo/paywall.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modal Tester Page</title>
+    <title>All your monies are belong to us</title>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Yrsa|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.5.1/css/iziModal.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,165 +17,7 @@
 </head>
 
   <body>
-    <script>
-    
-//     $(".panel").on('keypress', ".in-terminal", function(e) {
-//     console.log("test1");
-//     if (e.which == 13) {
-//         $(this).prop('readonly', true);
-//         var input = $(this).val().split(" ");
-//         console.log(input);
-//         if (input[1]) {
-//             var output = execute(input[0], input[1]);
-//         } else {
-//             var output = execute(input[0], "");
-//         }
-//         $(".output").last().html(output)
-//         $(".panel").append($("<div class='action'>").html("<div class='action'><div class='command'><span class='symbol'>$</span><input class='in' type='text'></div><div class='output'></div></div>"));
-//         $(".in").last().focus();
-//     }
-// });
 
-
-function execute(command, parameters) {
-    console.log(command, parameters);
-    if (window[command]) {
-        return window[command](parameters);
-    } else {
-        return "bash: " + command + " : command not found";
-    }
-}
-
-files = {
-    "root": {
-        "aboutme.txt": "-Get new shell, -Buy Milk",
-        "passwords.txt": "gmail: p@ssword, reddit: hunter2",
-        "projects": {
-            "bio.txt": "cells organisms",
-            "chem.txt": "ions protons"
-        }
-    }
-}
-
-
-var upperFolder = null;
-var currentFolder = files["root"];
-var path = [];
-
-function unlock_pick_up (param) {
-  console.log(param);
-  if(param == "true") {
-    return "Pick Up Unlocked! <br"+"> Sending you to next level...";
-  }
-  else if(param == "false") {
-    return "Pick up disabled.";
-  }
-  else {
-    return "bash: command not found";
-  }
-}
-
-function set_power_level(level) {
-  return "Power level set to " + level;
-}
-
-function change_hero(heroName) {
-  return "Hero Changing locked, please purchase hero pack";
-}
-
-
-function list_abilities() {
-  return "The abilities available are as follows:<br"+"> <br"+"> set_power_level (param: 0-100) <br"+"> unlock_pick_up (param: true/false) <br"+"> change_hero (param: heroName)";
-}
-
-
-function ls() {
-    var keys = [];
-    for (var key in currentFolder) {
-        if (currentFolder.hasOwnProperty(key)) { //to be safe
-            keys.push(key);
-        }
-    }
-    return keys.join(" ");
-}
-
-function cat(filename) {
-    if (filename == "") {
-        return "usage: cat file ...";
-    }
-    if (typeof currentFolder[filename] == "object") {
-        return "cat: " + filename + " : Is a directory"
-
-    }
-    if (currentFolder[filename] == "") {
-        return "";
-    }
-    if (currentFolder[filename]) {
-        return currentFolder[filename];
-    } else {
-        return "cat: " + filename + " : No such file or directory"
-    }
-}
-
-function cd(folder) {
-    if (folder == "") {
-        return "";
-    }
-    if (folder == "..") {
-        if (path.length > 0) {
-            currentFolder = upperFolder;
-            path.pop();
-        }
-    } else if (typeof currentFolder[folder] == "object") {
-        upperFolder = currentFolder;
-        currentFolder = currentFolder[folder];
-        path.push(folder);
-    } else {
-        return "bash: cd: " + folder + ": No such file or directory";
-    }
-}
-
-function mkdir(folderName) {
-    if (folderName != "") {
-        currentFolder[folderName] = {};
-        return "";
-    } else {
-        return "usage: mkdir directory ...";
-    }
-}
-
-function touch(fileName) {
-    currentFolder[fileName] = "";
-}
-
-function echo(string) {
-    return string;
-}
-
-function rm(name) {
-    delete currentFolder[name]
-}
-
-function help() {
-    return "Commands: cls, ls, cd, mkdir, echo, touch, rm, cat, pwd, list_abilities, help";
-}
-
-function pwd() {
-    if (path.length == 0) {
-        return "/"
-    }
-    return "/" + path.join("/")
-}
-
-function cls() {
-    location.reload();
-}
-
-$('.panel').stop().animate({
-    scrollTop: $(".panel")[0].scrollHeight
-}, 800);
-    
-    </script>
 
     <!-- this is a modal to prompt the user to pay their monies-->
 
@@ -674,7 +516,96 @@ function loadTerminal() {
 
 
     <style>
+
+
     /** begin product card **/
+    @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
+
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+    max-width: 800px;
+    margin: auto;
+    height: 400px;
+}
+
+
+.header {
+    background: linear-gradient(#f1f1f1 , #d3d3d3);
+    width: 100%;
+    height: 30px;
+    border-radius: 10px 10px 0 0;
+    position: relative;
+    border-bottom: 2px solid;
+    border-color: #9a9a9a;
+    text-align:;
+}
+
+.dot {
+    position: absolute;
+    top: 40%;
+    width: 10px;
+    height: 10px;
+    left:10px;
+    border-radius: 10px;
+    display: inline-block;
+        
+}
+
+.red {
+    margin-left: 10px;
+    background: #fc625d;
+}
+
+.yellow {
+    margin-left: 30px;
+    background: #fdbc40;
+}
+
+.green {
+    margin-left: 50px;
+    background: #33c748;
+}
+
+.panel {
+    height: 70vh;
+    background: #27292c;
+    /* padding: 20px; */
+    overflow-y: scroll;
+}
+
+.action {
+    margin-bottom: 10px;
+}
+
+.command {
+    width: 100%;
+    height: 20px;
+    background: #27292c;
+    color: #c86762;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+input[type="text"] {
+    width: 90%;
+    background: #27292c;
+    border: none;
+    outline: none;
+    color: white;
+    margin-left: 5px;
+    font-size: 16px;
+}
+
+.output {
+    color: white;
+    font-weight: 300;
+    margin-top: 5px;
+    margin-left: 12px;
+}
 
 
     .productBack {
