--- a/views/levelTwo/paywall.html
+++ b/views/levelTwo/paywall.html
@@ -494,7 +494,9 @@ function codeIncorrect(incorrectCode) {
 
 
 function exitToMain() {
-    window.location.href="/levelOne";
+    iframe = window.parent.document.querySelector('iframe');
+    iframe.setAttribute('src', '/levelOne');
+    iframe.setAttribute('class', 'game-container');
 }
 
 function exitBuyHero() {
@@ -506,7 +508,9 @@ function buyHero() {
 }
 
 function exitToTwo() {
-    window.location.href="/levelTwo";
+    iframe = window.parent.document.querySelector('iframe');
+    iframe.setAttribute('src', '/levelTwo');
+    iframe.setAttribute('class', 'game-container2');
 }
 
 function loadTerminal() {
