Changed color of loading page

--- a/views/loading.html
+++ b/views/loading.html
@@ -14,11 +14,11 @@
 
   <div class="w3-container">
   <div class="w3-light-grey w3-tiny">
-    <div id="myBar" class="w3-container w3-blue w3-center" style="width:0%">0%</div>
+    <div id="myBar" class="w3-container w3-black w3-center" style="width:0%">0%</div>
   </div>
   <br>
   <center>
-    <button class="w3-button w3-blue" onclick="move()">Start</button> 
+    <button class="w3-button w3-black" onclick="move()">Start</button> 
   </center>
   </div>
 </div>
